--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# ###### Project Rules ###### #
+# exclusion rules specifique to this project
+
+*Exit-Data*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
